<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetParametersRectangle" android:id="@+id/constrRec">

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/showResultsRectangleButton"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="1.0"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/linearLayout5">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/aSide" android:layout_weight="1" android:hint="@string/a_side"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/bSide" android:layout_weight="1" android:hint="@string/b_side"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/x1Coord" android:layout_weight="1"
                    android:visibility="invisible" android:hint="@string/x1"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/y1Coord" android:layout_weight="1"
                    android:visibility="invisible" android:hint="@string/y1"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/x2Coord" android:layout_weight="1"
                    android:visibility="invisible" android:hint="@string/x2"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/y2Coord" android:layout_weight="1"
                    android:visibility="invisible" android:hint="@string/y2"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout4">
        <Button
                android:text="@string/enter_sides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/sidesButon" android:layout_weight="1"
                android:visibility="invisible"/>
        <Button
                android:text="@string/enter_coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/coordinatesButton" android:layout_weight="1"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>